--- a/.gitignore
+++ b/.gitignore
@@ -1,15 +1,6 @@
-/build_local/
-/cache/
+/build_*/
 /node_modules/
+/source/assets/build/
 /vendor/
+.DS_Store
 /.idea/
-/.vscode/
-npm-debug.log
-yarn-error.log
-
-# Optional ignores
-# /build_staging/
-/build_production/
-# /source/assets/build/css/
-# /source/assets/build/fonts/
-# /source/assets/build/js/
