--- a/package.json
+++ b/package.json
@@ -1,28 +1,25 @@
 {
     "private": true,
     "scripts": {
-        "local": "cross-env NODE_ENV=development node_modules/webpack/bin/webpack.js --progress --hide-modules --env=local --config=node_modules/laravel-mix/setup/webpack.config.js",
-        "staging": "cross-env NODE_ENV=staging node_modules/webpack/bin/webpack.js --progress --hide-modules --env=staging --config=node_modules/laravel-mix/setup/webpack.config.js",
-        "production": "cross-env NODE_ENV=production node_modules/webpack/bin/webpack.js --progress --hide-modules --env=production --config=node_modules/laravel-mix/setup/webpack.config.js",
-        "dev": "npm run local",
-        "prod": "npm run production",
-        "watch": "npm run local -- --watch"
+        "dev": "mix",
+        "watch": "mix watch",
+        "prod": "mix --production"
     },
     "devDependencies": {
-        "browser-sync": "^2.26.3",
-        "browser-sync-webpack-plugin": "^2.0.1",
-        "cross-env": "^6.0.3",
-        "extra-watch-webpack-plugin": "^1.0.3",
-        "hasbin": "^1.2.3",
-        "laravel-mix": "^4.0.0",
-        "node-cmd": "^3.0.0",
-        "sass": "^1.15.2",
-        "sass-loader": "^7.1.0",
-        "vue-template-compiler": "^2.6.10",
-        "yargs": "^4.6.0"
-    },
-    "dependencies": {
-        "@fortawesome/fontawesome-free": "^5.11.2",
-        "tailwindcss": "^1.1.2"
+        "@tailwindcss/aspect-ratio": "^0.4.0",
+        "axios": "^0.26.1",
+        "fast-glob": "^3.2.11",
+        "fuse.js": "^6.5.3",
+        "highlight.js": "^11.4.0",
+        "laravel-mix": "^6.0.43",
+        "laravel-mix-jigsaw": "^2.0.0",
+        "postcss": "^8.4.8",
+        "postcss-import": "^14.0.2",
+        "tailwindcss": "^3.0.23",
+        "vue": "^2.6.12",
+        "vue-loader": "^15.9.6",
+        "vue-template-compiler": "^2.6.12",
+        "@fortawesome/fontawesome-free": "^5.15.3",
+        "@tailwindcss/forms": "^0.4.1"
     }
 }
